@startuml
'reference https://plantuml.com/ie-diagram
' avoid problems with angled crows feet
skinparam linetype ortho

entity dim_participant {
  *participantid: string <<pk>>
  --
  +username: string
  +email: string
  *created_dt: datetime
  *last_login_dt: datetime
}

entity fact_has_accessright_topic {
    id: int <<pk>>
    quizid: int <<fk>>
    participantid: string <<fk>>
    --
    valid_from: datetime
    valid_until: datetime
}

entity dim_quiz_multiple {
  *quizid: int <<pk>>
  --
  +quiztopic: string
  +quizdifficulty: int
  +quizlevel: string
}

entity dim_question {
  *questionid: int <<pk>>
  *quizid: int <<fk>>
  --
  *text: string
  +quizhasmultipleanswers: boolean
}

entity dim_option {
  *optionid: int <<pk>>
  *questionid: int <<fk>>
  --
  *text: string
  *iscorrect: boolean
  +option_no: int
  *quiz_question_option: string
}

entity fact_answer {
  *answerid: int <<pk>>
  *participantid: string <<fk>>
  *quizid: int <<fk>>
  *questionid: int <<fk>>
  --
  +quiz_question_option: string <<fk>>
  +record_answer_dt: datetime
  +idle_seconds: int
}

entity fact_quizoption_selected {
  *quizselectedid: int <<pk>>
  *participantid: string <<fk>>
  *quizid: int <<fk>>
  --
  *selected_quiz_ts: datetime
}



dim_quiz_multiple ||--o{ dim_question
dim_quiz_multiple ||--o{ fact_answer
dim_quiz_multiple ||--|{ fact_quizoption_selected
dim_quiz_multiple ||--o{ fact_has_accessright_topic
dim_question ||--|{ dim_option
dim_participant |o--o{ fact_answer
dim_participant ||--o{ fact_quizoption_selected
dim_participant ||--o{ fact_has_accessright_topic
fact_answer }|--|| dim_question
fact_answer }o--|| dim_option

@enduml
